# ChangeLog for dev-perl/Email-Simple
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.34 2008/08/23 19:22:10 tove Exp $

*Email-Simple-2.004 (23 Aug 2008)

  23 Aug 2008; Torsten Veller <tove@gentoo.org> +Email-Simple-2.004.ebuild:
  Version bump

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> Email-Simple-2.003.ebuild:
  Stable on ppc64

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Email-Simple-2.003.ebuild:
  ppc. stable

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Email-Simple-2.003.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Email-Simple-2.003.ebuild:
  alpha/ia64/sparc/x86 stable

  04 Dec 2007; Markus Rothe <corsair@gentoo.org> Email-Simple-1.999.ebuild:
  Stable on ppc64; bug #198075

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Email-Simple-1.999.ebuild:
  amd64 stable

*Email-Simple-2.003 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org>
  +Email-Simple-2.003.ebuild:
  Version bump

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Email-Simple-1.999.ebuild:
  Stable on ppc.

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Email-Simple-1.999.ebuild:
  alpha/x86 stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Simple-1.999.ebuild:
  Marking sparc stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Email-Simple-1.998.ebuild:
  ppc stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Simple-1.998.ebuild:
  sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Simple-1.998.ebuild:
  Marking stable amd64

*Email-Simple-1.999 (06 Apr 2007)

  06 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +Email-Simple-1.999.ebuild:
  Version bump

  08 Mar 2007; Andrej Kacian <ticho@gentoo.org> Email-Simple-1.996.ebuild:
  Stable on x86, bug #169152.

  03 Mar 2007; Michael Cummings <mcummings@gentoo.org>