@@ -1,26 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST Email-Simple-1.990.tar.gz 16453 RMD160 e5533956ab22ab54631cb7845bde057517402580 SHA1 170de3a01b4afd73faf916ef50b4790e75bf374b SHA256 e966e92cfedd60d7a8d702af867300cc6d4393e1db86d9bfd0ba811baa32ef7b
-DIST Email-Simple-1.995.tar.gz 17684 RMD160 090de3c7d206b6149047c9fbff178b520e8d6bc3 SHA1 f3019c408e6db3c92bc4fdb18b79f8ff28be7f5c SHA256 c754683f2c0346c3fb7181be832ebfafb3ff3f43358f804e458a78b307491348
-DIST Email-Simple-1.996.tar.gz 25335 RMD160 61f959e2b473ef3764af5dae983f5b1e4085bb82 SHA1 48365c89e58ba0741806391eebff8bf60d2227b5 SHA256 649c6a15cb718d602a4bc92cf800f80da3f7bc41e28ddd5c83b9b01f74ec1d6b
-DIST Email-Simple-1.998.tar.gz 26993 RMD160 3d65c5fd9352dba0f436fad94709667e5785ee21 SHA1 c0a33ca827b759f7ef88eb97fe3e15ae64ef9ab7 SHA256 e769bdc199719701464a1cd5d99aa02ae19ef0def23a4b9b771c0645f951f67e
-DIST Email-Simple-1.999.tar.gz 27466 RMD160 1fb55454f39bb4ff0716797aa03fdf316bedf190 SHA1 3c1294c69bd3918d9f6f7c589c8f96f56b108521 SHA256 7c91605734a8e39a64ccbdf520a41b6eb0ace93b276a743035eb075321ad70ff
 DIST Email-Simple-2.003.tar.gz 28677 RMD160 2f1a78bf040b84ac19e4e0dd3e1e718c6c054670 SHA1 a9d6f698d44ef8bb01234ceb8eaaefed4d55e8fc SHA256 e6a105aac899c5626ce672d919bb82a091603eeabae812c8f178c216ef380841
 DIST Email-Simple-2.004.tar.gz 28329 RMD160 5fb4c7f4a736ce16efb30256542c4d27b67b2913 SHA1 44a78f3da98571298b32e7732447c1e78dec0b21 SHA256 038719c4716e09ed5b5d302d9a41a54bf00220ed13c531fd97b525225efd6edc
-EBUILD Email-Simple-1.990.ebuild 534 RMD160 16bc65f7b0a3c69a348f9dbc6da5e6342a7803a5 SHA1 16f4b02fe7846b5ff57ced7df51753c43f549281 SHA256 0e7cc319638b511ea0a0771fe865918bfdd0d46e019bbeb45a6564751ad635a2
-EBUILD Email-Simple-1.995.ebuild 535 RMD160 121b50bdb8d3da9a8043de7d51d9e3856b8499ca SHA1 c227e52b606095ddddb526ff3242f9e10f4090e6 SHA256 b37f95ed34aa8ae0369601ba919ffc1ea0942b4101cf7ca167ccff61cf38b0c8
-EBUILD Email-Simple-1.996.ebuild 543 RMD160 c08e0a91ad9f370aa910bcc24750f0d8b1a59482 SHA1 e5fb201629e094ea7ec60310128f92e50d7923f7 SHA256 3c1984a93bb2e8182ab35388f921b10de217fa695070ac48bc38ecf7ff8fe446
-EBUILD Email-Simple-1.998.ebuild 548 RMD160 1aadb896a837a8cfe1dbe670f16b0268ef967bea SHA1 f6f7b33829d070bd0a3e098e7a2a5447f3099c1c SHA256 49ce72a67d231c5bcb7cb1751c126e4e03976e636ed8191bc9560f6a45ccd160
-EBUILD Email-Simple-1.999.ebuild 542 RMD160 db854a784078d7a13e4f4f5648824e8cc9af8703 SHA1 cbe13b421d4d55106795a517344f6926d61d501a SHA256 8c29b3fd97215248678580607e3eac085368519061efbc3cf03770c6c9679b3c
 EBUILD Email-Simple-2.003.ebuild 541 RMD160 200195c845b166d484c5471e7df064b96276e072 SHA1 6189f5aaa6b3843ac9cc3b5193fba01e5e0df694 SHA256 089da90d90bc6cf0ba1a2fc0953dea267c315bfbb39c743a3872699f74469668
 EBUILD Email-Simple-2.004.ebuild 479 RMD160 208ed6c582cc423945781c62a506c08cc1c06f00 SHA1 6a1e4d82899ce53bb0e97c17d1568bfc722f484c SHA256 c53543afc3c08512dc84096146fb1cfd7f5b57e0780754ff70eaf9c6ec2eba46
-MISC ChangeLog 4126 RMD160 582160d14d6a4244286f67537ccc07c48012e350 SHA1 eab47f1034869eb7dd6f473ac7759b2d5a6b5923 SHA256 617ea2f9fd4f3aa6046f856b9952699fc0bb7153ec6d41b7e2596acbd1a52d16
+MISC ChangeLog 4329 RMD160 1b731adbc0980a9fa68d12c28ac4cf98382647da SHA1 57170122e89097410fce643d0fd281e8ee6d062c SHA256 cb4bd22a20db4208bb63fff27f1a727389e2f7d3eaec32b9c71f973dda0d0433
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiwY1UACgkQV3J2n04EauzxQgCfWSiAGeAh59z7J8+DuP6o+Y+O
-TScAoL6KuRgnYMkgJbG4r9EkAPqdqo20
-=E2p6
+iEYEARECAAYFAkiwZCEACgkQV3J2n04EauziuACgoutmQyeOiqGKb+hAAvsexQ19
+U/kAoJrf1j8I7KnMbgIMSXN1mh35gOeT
+=g1a4
 -----END PGP SIGNATURE-----
