@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Email-Simple
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.34 2008/08/23 19:22:10 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.35 2008/08/23 19:25:36 tove Exp $
+
+  23 Aug 2008; Torsten Veller <tove@gentoo.org> -Email-Simple-1.990.ebuild,
+  -Email-Simple-1.995.ebuild, -Email-Simple-1.996.ebuild,
+  -Email-Simple-1.998.ebuild, -Email-Simple-1.999.ebuild:
+  Cleanup
 
 *Email-Simple-2.004 (23 Aug 2008)
 
